# impact-explorer

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/impact_explorer/: anthropic_client.py  main.py  models.py  routes.py  utils.py
src/impact_explorer/cli/: chunking_strategies.py  document_processor.py  utils.py
static/: chat.css  chat.js
templates/: index.html
tests/: test_main.py
