[metadata]
name = impact_explorer
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python application for exploring NASA IMPACT projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/impact_explorer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    numpy
    pandas
    fastapi
    uvicorn

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest

[flake8]
max-line-length = 88
exclude = .git,__pycache__,dist,build,venv

[isort]
profile = black
